tests/paczka1/small_fuzzy/97335670.err
Error in line 2: tpxxh A164 37,2
Error in line 3: ec404W8 S141 80,1
Error in line 4: S319 S141 66,6
Error in line 11: ec404W8 A164 36,0
